--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 Theme Name:     Sophistique
 Theme URI:      http://tmeister.net/sophistique
 Description:    Child theme for the DMS
-Author:         Enrique Chavez
+Author:         Enrique Chavez G.
 Author URI:     http://tmeister.net
-Template:       pagelines                      
+Template:       pagelines
 Version:        1.0
 */
