--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name:     Sophistique
 Theme URI:      http://tmeister.net/sophistique
 Description:    Child theme for the DMS
-Author:         Enrique Chavez G.
+Author:         Enrique Chavez G..
 Author URI:     http://tmeister.net
 Template:       pagelines
 Version:        1.0
