--- a/sections/contact-bar/color.less
+++ b/sections/contact-bar/color.less
@@ -1,6 +1,6 @@
-@cColor = #ff6600;
-@cCBack = #ffffff;
-@cCText = #333333;
+@cColor = @pl-link;
+@cCBack = @pl-base;
+@cCText = @pl-text;
 
 .section-contact-bar{
     /**************************************************************************
