--- a/sections/sophistique-menu/color.less
+++ b/sections/sophistique-menu/color.less
@@ -1,7 +1,7 @@
 @cMBack = #ffffff;
 @cMAlpha = .5;
-@cMText = #585858;
-@cMTextHover = #ff6600;
+@cMText = @pl-text;
+@cMTextHover = @pl-link;
 .section-sophistique-menu{
 	/**************************************************************************
 	** Reset bottom margin on bootstrap spans
@@ -27,6 +27,7 @@
 			float: left;
 			display: block;
 			position: relative;
+			font-size: 14px;
 			&:hover{
 
 				a{
