--- a/style.css
+++ b/style.css
@@ -4,6 +4,6 @@ Theme URI:      http://tmeister.net/sophistique
 Description:    Child theme for the DMS
 Author:         Enrique Chavez G..
 Author URI:     http://tmeister.net
-Template:       pagelines
+Template:       dms
 Version:        1.0
 */
