--- a/style.less
+++ b/style.less
@@ -29,11 +29,12 @@ a{
 .section-icallout{
 	.pl-section-pad{
 		background-color: #ffffff;
+		border-top: 5px solid @pl-link;
 		.border-radius(5px);
 	}
 	.format-inline{
 		.icallout-head{
-			font-size: 16px;
+			font-size: 30px;
 			width: 80%;
 			display:  inline-table !important;
 			text-align: left;
