Slider text shadow

--- a/sections/revolution-slider/color.less
+++ b/sections/revolution-slider/color.less
@@ -91,6 +91,7 @@
 			font-size: 36px;
 			line-height: 36px;
 			font-weight: 700;
+			text-shadow:0 0 2px black;
 		}
 
 		&.big_black{
@@ -98,6 +99,7 @@
 			font-size: 36px;
 			line-height: 36px;
 			font-weight: 700;
+			text-shadow:0 0 2px black;
 		}
 		&.medium_grey{
 			color: #fff;
@@ -105,6 +107,7 @@
 			font-weight: 700;
 			font-size: 20px;
 			line-height: 20px;
+			text-shadow:0 0 2px black;
 		}
 		&.small_text{
 			color: #fff;
@@ -121,6 +124,7 @@
 			font-weight: 700;
 			font-size: 20px;
 			line-height: 20px;
+			text-shadow:0 0 2px black;
 		}
 		&.large_text{
 			font-weight: 700;
@@ -140,8 +144,8 @@
 			font-weight: 700;
 			font-size: 60px;
 			line-height: 60px;
-			text-shadow: none;
 			color: #fff;
+			text-shadow:0 0 2px black;
 		}
 		&.very_big_black{
 			color: #000;
@@ -149,6 +153,7 @@
 			font-weight: 700;
 			font-size: 60px;
 			line-height: 60px;
+			text-shadow:0 0 2px black;
 		}
 
 		&.boxshadow{
