--- a/sections/revolution-slider/color.less
+++ b/sections/revolution-slider/color.less
@@ -116,6 +116,7 @@
 			font-weight: 700;
 			font-size: 14px;
 			line-height: 20px;
+			text-shadow:0 0 2px black;
 		}
 		&.medium_white{
 			color: #fff;
@@ -131,13 +132,14 @@
 			font-size: 40px;
 			line-height: 40px;
 			color: #fff;
+			text-shadow:0 0 2px black;
 		}
 
 		&.very_large_text{
 			font-weight: 700;
 			font-size: 60px;
 			line-height: 60px;
-			text-shadow: none;
+			text-shadow:0 0 2px black;
 			color: #fff;
 		}
 		&.very_big_white{
