--- a/style.less
+++ b/style.less
@@ -59,7 +59,11 @@ a{
 	.box-shadow(0 1px 3px rgba(0,0,0, .2));
 }
 
-
+.page{
+	.hentry-pad{
+		padding: 0px 10px 10px 10px;
+	}
+}
 
 
 //.ibox.top-aligned .ibox-media .media-type-image
