--- a/sections/sophistique-menu/color.less
+++ b/sections/sophistique-menu/color.less
@@ -48,6 +48,15 @@
 	                z-index: 999;
 	            }
 			}
+			&:last-child{
+				ul.sub-menu,
+	        	ul.children{
+	        		ul.children,
+	            	ul.sub-menu{
+	            		left: -90%;
+	            	}
+	            }
+			}
 
 			a{
 				display: block;
@@ -92,7 +101,8 @@
 	                	font-size: 0.9em;
 	                	font-weight: normal;
 	                    color:@cMText;
-	                    min-width: 150px;
+	                    min-width: 135px;
+	                    max-width: 135px;
 	                    text-align: left;
 	                    padding: 5px 10px;
 	                    border-bottom: 1px solid #EEE;
