--- a/sections/sophistique-menu/color.less
+++ b/sections/sophistique-menu/color.less
@@ -71,7 +71,7 @@
 					display: block;
 					width: 100%;
 					margin: 0px 0px 0px 0px;
-					text-transform: lowercase;
+					text-transform: uppercase;
 					font-weight: normal;
 					font-size: 0.8em;
 					.transition( all 0.25s ease );
