--- a/style.less
+++ b/style.less
@@ -121,3 +121,141 @@ a{
 }
 
 
+#new-main-menu,
+#mobile-menu-trigger {
+	display: none;
+	visibility: hidden;
+}
+
+/******************************************************************************
+* MEDIA QUERIES
+******************************************************************************/
+
+/* Smartphones (portrait and landscape) ----------- */
+@media screen and (min-width : 320px) and (max-width : 480px) {
+	.cb-icons{
+		display: block;
+		height: 65px;
+	}
+	.mainlogo-link{
+		position: relative;
+		left: 20px;
+	}
+	
+	.section-contact-bar{
+		display:none;
+	}
+	.nav-sophis{
+		display: none;
+	}
+	.so_logo{
+		left:45px;
+		position: relative;
+	}
+	
+	.section-sophistique-menu .nav-sophis-holder{
+		float: left !important;
+		width: 100%;
+	}
+
+	#mobile-menu-trigger {
+		display: block;
+		font-size: 16px;
+		font-weight: 300;
+		height: 18px;
+		line-height: 18px;
+		margin: auto;
+		max-width: 480px;
+		padding: 12px 0 12px 20px;
+		position: relative;
+		text-decoration: none;
+		z-index: 9999;
+		visibility: visible;
+		text-align: center;
+		border-top: 1px solid #efefef
+	}
+
+	#mobile-menu-trigger.down span {
+		background-position: 22px -34px;
+	}
+
+	#new-main-menu {
+		max-width: 480px;
+		margin: auto;
+		background: #f5f5f5;
+		border: 1px solid #CCCCCC;
+		width: 95% !important;
+		display: block;
+		overflow: hidden;
+		position: relative;
+		z-index: 9997;
+		text-align: left;
+		visibility: visible;
+		margin-bottom: 10px;
+	}
+
+	#new-main-menu a {
+		font-size: 14px !important;
+		padding: 10px;
+		display: block;
+	}
+	
+	#new-main-menu a span{
+		display: none !important;
+	}
+
+	#new-main-menu ul a {
+		font-size: 13px;
+		padding-left: 30px;
+	}
+
+	#new-main-menu ul ul a {
+		font-size: 12px;
+		padding-left: 50px;
+	}
+
+	#new-main-menu li {
+		border-bottom: 1px solid #ccc;
+	}
+
+	#new-main-menu > li:last-child,#new-main-menu > li:last-child a {
+		border-bottom: none;
+	}
+
+	#new-main-menu ul li {
+		border-bottom: none;
+	}
+
+	/*RESET*/
+	.main_nav ul,.main_nav ul li,.main_nav ul ul li {
+		float: none !important;
+	}
+
+	#new-main-menu > li {
+		float: none;
+		background: none;
+	}
+
+	.main_nav ul li {
+		text-align: left !important;
+	}
+
+	#brandnav .brandnav-nav,#nav .navigation_wrap {
+		margin: 20px 0 !important;
+		float: none !important;
+
+	}
+
+	#brandnav .mainlogo-link,#brandnav .title-container {
+		float: none !important;
+	}
+
+	.responsive .navigation_wrap .searchform {
+		top: -75px;
+		width: 100%;
+	}
+
+	.navigation_wrap .searchform .searchfield,.navigation_wrap .searchform .searchfield:focus {
+		width: 89%;
+	}
+}
