Max height for mobile Revolution Slider

--- a/style.less
+++ b/style.less
@@ -254,4 +254,9 @@ a{
 	.navigation_wrap .searchform .searchfield,.navigation_wrap .searchform .searchfield:focus {
 		width: 89%;
 	}
+	.section-revolution-slider{
+		.fullwidthbanner-container{
+			max-height:600px !important;
+		}
+	}
 }
