Adding Marketing stuff

--- a/style.less
+++ b/style.less
@@ -116,8 +116,11 @@ a{
 
 #footer{
 	#translucent > .background( #000000 ,0.5); 
-	border-top: 3px solid #000000;
+	border-top: 5px solid #000000;
 	color:#ffffff;
+	text-shadow:1px 1px 1px black;
+	font-weight: 600;
+
 }
 
 
