Media Update and descriptions

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
 Theme Name:     Sophistique
-Theme URI:      http://tmeister.net/sophistique
-Description:    Child theme for the DMS
-Author:         Enrique Chavez G..
+Theme URI:      http://dms.tmeister.net/sophistique
+Description:    Sophistique is a child theme for PageLines DMS, simple, clean and multi-porpuse, Six Build-in unique sections: Contact Bar, Sophistique Menu, Revolution Slider, Easy Pie Chart, Collapser. Use the "link" color as the complemetary color, set the theme color is a one click away.
+Author:         Enrique Chavez
 Author URI:     http://tmeister.net
 Template:       dms
 Version:        1.0
