Add left padding to the "Call me" box

--- a/style.less
+++ b/style.less
@@ -130,6 +130,12 @@ a{
 	visibility: hidden;
 }
 
+.cb-first-row{
+	.cb-holder{
+		padding-left: 10px;
+	}
+}
+
 /******************************************************************************
 * MEDIA QUERIES
 ******************************************************************************/
