--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 /*
 Theme Name:     Sophistique
 Theme URI:      http://dms.tmeister.net/sophistique
-Description:    Sophistique is a child theme for PageLines DMS, simple, clean and multi-porpuse, Six Build-in unique sections: Contact Bar, Sophistique Menu, Revolution Slider, Easy Pie Chart, Collapser. Use the "link" color as the complemetary color, set the theme color is a one click away.
+Description:    Sophistique is a child theme for PageLines DMS. It is simple, clean and multipurpose, and has five built-in unique sections: Contact Bar, Sophistique Menu, Revolution Slider Reloaded, Easy Pie Chart, and Collapser. This theme uses the “link” color as the complementary color so setting the theme color is one click away.
 Author:         Enrique Chavez
 Author URI:     http://tmeister.net
 Template:       dms
 Version:        1.0
+PageLines:      true
 */
