Author tag view fixed
Signed-off-by: Enrique Chavez <noone@tmeister.net>

--- a/style.less
+++ b/style.less
@@ -123,6 +123,20 @@ a{
 
 }
 
+.article-wrap{
+	.author-tag{
+		padding-left: 20px;
+		padding-right: 10px;
+		margin-top: 10px;
+		img{
+			max-width: 100% !important;
+		}
+		.author{
+			text-align: center;
+		}
+	}
+}
+
 
 #new-main-menu,
 #mobile-menu-trigger {
