Commit this old fixes

--- a/sections/collapser/color.less
+++ b/sections/collapser/color.less
@@ -2,7 +2,7 @@
 ** LESS FOR COLLAPSER
 ******************************************************************************/
 
-.section-collapser{
+/*.section-collapser{
 
 	.block-title {
 		font-size: 14px;
@@ -30,7 +30,7 @@
 			background: none;
 			margin-bottom: 5px;
 			border: 0 none;
-			.border-radius(0);
+			border-radius:0;
 			.collapse{
 				background: #ffffff;
 			}
@@ -53,7 +53,7 @@
 				&:hover, &.active{
 					.collapser-toggle{
 						color: #ffffff;
-						background:@pl-link; 
+						background:@pl-link;
 					}
 				}
 			}
@@ -70,3 +70,4 @@
 
 
 }
+*/
