--- a/sections/contact-bar/color.less
+++ b/sections/contact-bar/color.less
@@ -1,11 +1,8 @@
-@cColor = @pl-link;
+/*@cColor = @pl-link;
 @cCBack = @pl-base;
 @cCText = @pl-text;
 
 .section-contact-bar{
-    /**************************************************************************
-    ** Reset bottom margin on bootstrap spans
-    **************************************************************************/
     .row > [class*="span"], .row-fluid > [class*="span"], .editor-row > [class*="span"] {
         margin-bottom: 0px;
     }
@@ -14,18 +11,12 @@
         margin:15px 0;
     }
 
-    /**************************************************************************
-    ** Border on top
-    **************************************************************************/  
     border-top: 4px solid @cColor;
     border-bottom: 1px solid #efefef;
     background: @cCBack;
     color: @cCText;
 
 
-    /**************************************************************************
-    ** Main font size for the contact bar
-    **************************************************************************/
     font-size: 0.9em;
 
     .cb-holder{
@@ -36,9 +27,6 @@
             padding-top: 15px;
         }
     }
-    /**************************************************************************
-    ** Social icons menu
-    **************************************************************************/
     .social-holder{
         position: relative;
     }
@@ -88,18 +76,14 @@
             &.youtube{background-position:          0 -1601px;&:hover{background-position: 0 -1640px;};}
             &.behance{background-position:          0 -1681px;&:hover{background-position: 0 -1720px;};}
             &.instagram{background-position:        0 -1761px;&:hover{background-position: 0 -1800px;};}
-            
+
 
         }
     }
 }
 
-/*****************************************************************************
-** Retina display Images.
-******************************************************************************/
-
-@media screen and (-webkit-min-device-pixel-ratio: 2), 
-screen and (min--moz-device-pixel-ratio: 2), 
+@media screen and (-webkit-min-device-pixel-ratio: 2),
+screen and (min--moz-device-pixel-ratio: 2),
 screen and (max-moz-device-pixel-ratio: 2) {
     .section-contact-bar{
         .cb-menu{
@@ -110,3 +94,4 @@ screen and (max-moz-device-pixel-ratio: 2) {
         }
     }
 }
+*/
