--- a/sections/revolution-slider/color.less
+++ b/sections/revolution-slider/color.less
@@ -4,9 +4,9 @@
 	img{
 		max-width:none !important;
 		height:auto !important;
-		
+
 	}
-	
+
 	.content{
 		max-width:100% !important;
 		.content-pad{
@@ -15,13 +15,12 @@
 	}
 
 	.tp-simpleresponsive{
-		.user-select(@select);
 		.caption{
 			.opacity(0);
 			position:absolute;
 			visibility:hidden;
 		}
-		
+
 		img{
 			max-width:none !important;
 		}
@@ -39,30 +38,29 @@
 	}
 
 	.tp-bannershadow  {
-		.user-select(@select);
 		position:absolute;
 		margin-left:auto;
 		margin-right:auto;
 		&.shadow1{
-			background:url(@{plChildRoot}/sections/revolution-slider/assets/shadow1.png) no-repeat; 
-			background-size:100%; 
+			background:url(@{plChildRoot}/sections/revolution-slider/assets/shadow1.png) no-repeat;
+			background-size:100%;
 			bottom:-30px;
-			height:30px; 
-			width:890px; 
+			height:30px;
+			width:890px;
 		}
 		&.shadow2{
-			background:url(@{plChildRoot}/sections/revolution-slider/assets/shadow2.png) no-repeat; 
-			background-size:100%; 
+			background:url(@{plChildRoot}/sections/revolution-slider/assets/shadow2.png) no-repeat;
+			background-size:100%;
 			bottom:-60px;
 			height:60px;
-			width:890px; 
+			width:890px;
 		}
 		&.shadow3{
-			background:url(@{plChildRoot}/sections/revolution-slider/assets/shadow3.png) no-repeat; 
-			background-size:100%; 
+			background:url(@{plChildRoot}/sections/revolution-slider/assets/shadow3.png) no-repeat;
+			background-size:100%;
 			bottom:-60px;
 			height:60px;
-			width:890px; 
+			width:890px;
 		}
 	}
 
@@ -83,7 +81,7 @@
 			line-height: 36px;
 			font-weight: 700;
 			text-shadow:0 0 2px black;
-			
+
 		}
 
 		&.big_orange{
@@ -178,20 +176,20 @@
 
 		&.fullscreenvideo{
 			height:100%;
-			left:0px; 
+			left:0px;
 			position:absolute;
-			top:0px; 
+			top:0px;
 			width:100%;
 
 			iframe{
 				height:100% !important;
-				width:100% !important; 
+				width:100% !important;
 			}
 		}
 
 		a{
-			color: #ff7302; 
-			text-shadow: none;	
+			color: #ff7302;
+			text-shadow: none;
 			.transition(all 0.2s ease-out);
 			&:hover{
 				color: #ffa902;
@@ -201,30 +199,30 @@
 
 	.tp-bullets{
 		bottom:10px;
-		position:absolute; 
-		z-index:100; 
+		position:absolute;
+		z-index:100;
 
 		&.simplebullets{
 			bottom:10px;
 			&.navbar{
-				.border-radius(5px);
-				bottom:-20px; 
-				height:35px; 
+				border-radius:5px;
+				bottom:-20px;
+				height:35px;
 				margin-top:-17px;
-				padding:0px 0px; 
+				padding:0px 0px;
 				background: none;
 				#translucent > .background(white, .5);
 			}
 
 			&.square{
 				.bullet{
-					background:url(@{plChildRoot}/sections/revolution-slider/assets/bullets2.png) no-repeat bottom left;	
-					cursor:pointer; 
-					float:left; 
-					margin-right:0px; 
+					background:url(@{plChildRoot}/sections/revolution-slider/assets/bullets2.png) no-repeat bottom left;
+					cursor:pointer;
+					float:left;
+					margin-right:0px;
 					margin-top:-10px;
-					position:relative;	
-					width:19px;	height:19px;  
+					position:relative;
+					width:19px;	height:19px;
 					&.last{
 						margin-right:0px;
 					}
@@ -233,14 +231,14 @@
 
 			&.navbar{
 				.bullet{
-					background:url(@{plChildRoot}/sections/revolution-slider/assets/navigdots.png) no-repeat bottom left;	
-					cursor:pointer; position:relative;	
-					float:left; 
-					height:15px;  
-					margin-left:5px !important; 
+					background:url(@{plChildRoot}/sections/revolution-slider/assets/navigdots.png) no-repeat bottom left;
+					cursor:pointer; position:relative;
+					float:left;
+					height:15px;
+					margin-left:5px !important;
 					margin-right:5px !important;
 					margin-top:10px;
-					width:15px;	
+					width:15px;
 					&.first{
 						margin-left:20px !important;
 					}
@@ -251,13 +249,13 @@
 			}
 
 			.bullet{
-				background:url(@{plChildRoot}/sections/revolution-slider/assets/bullets.png) no-repeat bottom left;	
-				cursor:pointer; 
-				float:left; 
-				height:23px;  
-				margin-right:0px; 
+				background:url(@{plChildRoot}/sections/revolution-slider/assets/bullets.png) no-repeat bottom left;
+				cursor:pointer;
+				float:left;
+				height:23px;
+				margin-right:0px;
 				margin-top:-12px;
-				position:relative;	
+				position:relative;
 				width:23px;
 				&.last{
 					margin-right:0px;
@@ -270,27 +268,27 @@
 		}
 
 		&.tp-thumbs{
-			z-index:100; 
-			position:absolute; 
+			z-index:100;
+			position:absolute;
 			padding:0px 2px 2px;
 			background-color:#fff;
 			width:500px;
 			height:50px;
 			.tp-mask{
-				width:500px; 
+				width:500px;
 				height:50px;
-				overflow:hidden; 
+				overflow:hidden;
 				position:relative;
 				.tp-thumbcontainer{
-					width:5000px; 
+					width:5000px;
 					position:absolute;
 				}
 			}
 
 			.bullet{
-				width:100px; 
+				width:100px;
 				height:50px;
-				cursor:pointer; 
+				cursor:pointer;
 				overflow:hidden;
 				background:none;
 				margin:0;
@@ -307,51 +305,51 @@
 	.tp-leftarrow,
 	.tp-rightarrow{
 		z-index:100;
-		cursor:pointer; 
-		position:relative;	
-		width:26px;	
-		height:26px;  
-		margin-right:0px; 
-		float:left; 
+		cursor:pointer;
+		position:relative;
+		width:26px;
+		height:26px;
+		margin-right:0px;
+		float:left;
 		margin-top:-13px;
 		&:hover{
 			background-position:bottom left;
-		}	
+		}
 	}
 
 	.tp-leftarrow{
 		background:url(@{plChildRoot}/sections/revolution-slider/assets/arrow_left.png) no-repeat top left;
 		&.navbar{
 			z-index:100;
-			cursor:pointer; 
-			position:relative;	
-			background:url(@{plChildRoot}/sections/revolution-slider/assets/arrowleft.png) no-repeat top left;		
-			width:9px;	
-			height:16px;   
-			float:left;	
-			margin-right:-20px; 
+			cursor:pointer;
+			position:relative;
+			background:url(@{plChildRoot}/sections/revolution-slider/assets/arrowleft.png) no-repeat top left;
+			width:9px;
+			height:16px;
+			float:left;
+			margin-right:-20px;
 			margin-top:-8px;
 			&.thumbswitharrow{
 				margin-right:10px;
 			}
 			&.square{
 				z-index:100;
-				cursor:pointer; 
-				position:relative;	
-				background:url(@{plChildRoot}/sections/revolution-slider/assets/arrow_left2.png) no-repeat top left;	
-				width:12px;	height:17px;   
-				float:left;	
-				margin-right:0px; 
+				cursor:pointer;
+				position:relative;
+				background:url(@{plChildRoot}/sections/revolution-slider/assets/arrow_left2.png) no-repeat top left;
+				width:12px;	height:17px;
+				float:left;
+				margin-right:0px;
 				margin-top:-9px;
 			}
 			&.large{
 				z-index:100;
-				cursor:pointer; 
-				position:relative;	
-				background:url(@{plChildRoot}/sections/revolution-slider/assets/arrow_large_left.png) no-repeat top left;	
-				width:46px;	
-				height:46px;  
-				margin-left:20px; 
+				cursor:pointer;
+				position:relative;
+				background:url(@{plChildRoot}/sections/revolution-slider/assets/arrow_large_left.png) no-repeat top left;
+				width:46px;
+				height:46px;
+				margin-left:20px;
 				margin-top:-23px;
 				&:hover{
 					background-position:bottom left;
@@ -364,35 +362,35 @@
 		background:url(@{plChildRoot}/sections/revolution-slider/assets/arrow_right.png) no-repeat top left;
 		&.navbar{
 			z-index:100;
-			cursor:pointer; 
-			position:relative;	
-			background:url(@{plChildRoot}/sections/revolution-slider/assets/arrowright.png) no-repeat top left;		
-			width:9px;	
-			height:16px;   
-			float:left;	
-			margin-right:-20px; 
+			cursor:pointer;
+			position:relative;
+			background:url(@{plChildRoot}/sections/revolution-slider/assets/arrowright.png) no-repeat top left;
+			width:9px;
+			height:16px;
+			float:left;
+			margin-right:-20px;
 			margin-top:-8px;
 			&.thumbswitharrow{
 				margin-left:0px;
 			}
 			&.square{
 				z-index:100;
-				cursor:pointer; 
-				position:relative;	
-				background:url(@{plChildRoot}/sections/revolution-slider/assets/arrow_right2.png) no-repeat top left;	
-				width:12px;	height:17px;   
-				float:left;	
-				margin-right:0px; 
+				cursor:pointer;
+				position:relative;
+				background:url(@{plChildRoot}/sections/revolution-slider/assets/arrow_right2.png) no-repeat top left;
+				width:12px;	height:17px;
+				float:left;
+				margin-right:0px;
 				margin-top:-9px;
 			}
 			&.large{
 				z-index:100;
-				cursor:pointer; 
-				position:relative;	
-				background:url(@{plChildRoot}/sections/revolution-slider/assets/arrow_large_right.png) no-repeat top left;	
-				width:46px;	
-				height:46px;  
-				margin-left:-20px; 
+				cursor:pointer;
+				position:relative;
+				background:url(@{plChildRoot}/sections/revolution-slider/assets/arrow_large_right.png) no-repeat top left;
+				width:46px;
+				height:46px;
+				margin-left:-20px;
 				margin-top:-23px;
 				&:hover{
 					background-position:bottom left;
@@ -414,16 +412,16 @@
 	}
 
 	.tp-thumbs{
-		img{	
-			width:100%; 
+		img{
+			width:100%;
 		}
 	}
 
 	.tp-bannertimer{
-		width:100%; 
-		height:10px; 
+		width:100%;
+		height:10px;
 		background:url(@{plChildRoot}/sections/revolution-slider/assets/timer.png);
-		position:absolute; 
+		position:absolute;
 		z-index:200;
 		&.tp-bottom{
 			bottom:0px !important;
@@ -442,12 +440,12 @@
 	}
 
 	.tp-loader{
-		background:url(@{plChildRoot}/sections/revolution-slider/assets/loader.gif) no-repeat 10px 10px; 
-		background-color:#fff;  
-		margin:-22px -22px; 
-		top:50%; 
-		left:50%; 
-		z-index:10000; 
+		background:url(@{plChildRoot}/sections/revolution-slider/assets/loader.gif) no-repeat 10px 10px;
+		background-color:#fff;
+		margin:-22px -22px;
+		top:50%;
+		left:50%;
+		z-index:10000;
 		position:absolute;
 		width:44px;
 		height:44px;
