--- a/style.less
+++ b/style.less
@@ -97,7 +97,7 @@ a{
 			padding: 28% 0 !important;
 		}
 		.ibox-icon-border{
-			.border-radius(0) !important;
+			border-radius:0 !important;
 		}
 	}
 }
